Revert "update engine"
This reverts commit 4a054160a7ffa0b2ca82b1abe3cfbc37a0232760.

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -96,7 +96,7 @@
         "message": "Last.Fm"
     },
     "lastfm_enable": {
-        "message": "Включить Last.fm"
+        "message": "Включить Last.fm <span class=\"labelx green\">Требуется доступ к Last.fm API</span>"
     },
     "links": {
         "message": "Ссылки"
