--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -21,13 +21,13 @@
         "message": "Автоматически сортировать аудиозаписи по битрейту."
     },
     "audio_bitrate_audio": {
-        "message": "Отображать битрейт при наведении на аудиозапись"
+        "message": "аудиозапись"
     },
     "audio_bitrate_downloadBtn": {
-        "message": "Отображать битрейт при наведении на кнопку скачивания"
+        "message": "кнопку скачивания"
     },
     "audio_bitrate_playBtn": {
-        "message": "Отображать битрейт при наведении на кнопку воспроизведения аудиозаписи"
+        "message": "кнопку воспроизведения аудиозаписи"
     },
     "audio_download_enable": {
         "message": "Скачивание аудио и отображение битрейта"
@@ -141,13 +141,13 @@
         "message": "Показывать только online пользователей."
     },
     "sidebar_open_ajax": {
-        "message": "Открывать ссылки в текущей вкладке"
+        "message": "текущей вкладке"
     },
     "sidebar_open_cur": {
-        "message": "Открывать ссылки в текущей вкладке с перезагрузкой страницы"
+        "message": "текущей вкладке с перезагрузкой страницы"
     },
     "sidebar_open_newTab": {
-        "message": "Открывать ссылки в новой вкладке"
+        "message": "новой вкладке"
     },
     "start_scrobble": {
         "message": "Скробблить с"
